# astrologer

./: CMakeLists.txt  README.md
boost_asio/: CMakeLists.txt
boost_asio/include/: common.h
boost_asio/src/: client.cpp  proxy.cpp  server.cpp
unix_socket_api/: CMakeLists.txt
unix_socket_api/binary_heap/: CMakeLists.txt  binary_heap.c  binary_heap.h  binary_heap_test.c
unix_socket_api/generic/: CMakeLists.txt  generic.c  generic.h
unix_socket_api/include/: logging.h
unix_socket_api/src/: CMakeLists.txt  astrolog.c  client.c  proxy.c
